--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,6 +39,7 @@
 
 
 <div style="background-color:#c4b0e0; padding:30px; border-radius:15px;">
+    <img src="../images/гагарина детсво.jpg" alt="Photo">
     <p><b>Доходы.</b> По версии Forbes, Полина Гагарина в 2020 году заняла второе место в рейтинге российских блогеров в
         Instagram по заработку с доходом $0,89 млн.<br><br>
     </p>
@@ -78,6 +79,7 @@
     <li>2021 — Бывшие-3 — Лена Бёрн, писательница</li>
     <li>2024 — Летучий корабль — леди Джейн</li>
 </ol>
+<div>
 <h2>Саундтреки</h2>
 <table>
     <tr>
@@ -121,7 +123,7 @@
 
 </table>
 
-<div>
+
     <img style="border-radius:25px;" src="../images/гагарина 3.jpg" alt="Картинка">
 
 </div>
