--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 <h1>Биография Полины Гагариной</h1>
@@ -39,21 +40,24 @@
 
 
 <div style="background-color:#c4b0e0; padding:30px; border-radius:15px;">
-    <img src="../images/гагарина детсво.jpg" alt="Photo">
+    <img style="border-radius:25px" src="../images/гагарина7.jpg" alt="Photo">
+    <img style="border-radius:25px" src="../images/ее.jpeg" alt="Photo">
+
     <p><b>Доходы.</b> По версии Forbes, Полина Гагарина в 2020 году заняла второе место в рейтинге российских блогеров в
         Instagram по заработку с доходом $0,89 млн.<br><br>
     </p>
 
 </div>
 
-
+<div>
 <p><b>Личная жизнь.</b> Первый муж — актёр Пётр Кислов (2007—2010),
     сын Андрей Кислов (род. 14 октября 2007).
     Второй муж — фотограф Дмитрий Исхаков (с 9 сентября 2014 года по февраль 2021 года),
     дочь Мия Исхакова (род. 26 апреля 2017)
 </p>
 
-
+<img style="border-radius:25px" src="../images/лич.jpeg" alt="Photo">
+<div/>
 <a href="https://www.gagarina.com/">Ссылка</a>
 <div>
     <img style="border-radius:25px" src="../images/Гагарина.jpg" alt="Картинка">
